--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@ html {
 	outline: 2px dotted #58b6e4;
 }
 
+.error-outline {
+	border: 2px solid red;
+}
+
 .form-wrapper {
 	color: #58595b;
 	font-family: 'DM Sans', sans-serif;
